style: fix z-index block in scriptPalette

--- a/client/features/playground/scriptEditor/ScriptEditor.module.css
+++ b/client/features/playground/scriptEditor/ScriptEditor.module.css
@@ -32,6 +32,7 @@
 }
 
 .scriptPaletteBlockWrapper {
+  z-index: 9999;
   width: 100%;
   max-width: fit-content;
   overflow: hidden;
